# terminal-bench-experiments

./: .gitignore  README.md  db-config.yaml  pyproject.toml  registry.json  terminal-bench-experiments.code-workspace
configs/: job.yaml
configs/claude-code/: job.yaml
configs/cleanup/: form-filling.yaml  port-compressor.yaml  test.yaml
configs/codex-cli/: job.yaml
configs/cursor-cli/: job.yaml
configs/gemini-cli/: job.yaml
configs/goose/: job.yaml
configs/leaderboard/: claude-code__minimax-m2.yaml  codex__gpt-5.1-codex-max.yaml  codex__gpt-5.1-codex.yaml  codex__gpt-5.1.yaml  gpt-5.1.yaml  kimi-k2-thinking.yaml  many__gpt-5.1-codex.yaml  sonnet-sanity-check.yaml  terminus-2__claude-kindal-eap-x16.yaml  terminus-2__claude-kindal-eap.yaml  terminus-2__gemini-3-pro-preview.yaml  terminus-2__gpt-5.1-codex.yaml  terminus-2__gpt-5.1-reasoning-high.yaml  terminus-2__grok-4.1.yaml
configs/mini-swe-agent/: crack-7z-hash.yaml  form-filling.yaml  job.yaml
configs/openhands/: form-filling.yaml  job.yaml
configs/proprietary-agents/: job.yaml
configs/qwen-code/: job.yaml
configs/reliability/: daytona-100.yaml  daytona-16.yaml  daytona-200.yaml  daytona-32.yaml  daytona-64.yaml
configs/swe-agent-mini/: job.yaml
configs/tb2/: mini-swe-agent.yaml  openhands.yaml  proprietary.yaml  terminus-closed.yaml  terminus-open-fireworks.yaml  terminus-open-slim.yaml
configs/terminus-2/: job.yaml  (+3 more)
dashboard/: import_jobs.py
db/: database_public_20251203084549429478.py  database_public_latest.py  schema.sql  schema_public_20251203084549426205.py  schema_public_latest.py
notebooks/: analysis.ipynb  hero_bar_chart.ipynb  hero_table.ipynb  missing_tokens_table.ipynb  model_task_heatmaps.ipynb
scripts/: analyze_failed_trials.py  check_downloaded_traces.py  create_remaining_trials_config.py  create_snapshots.py  get_failed_trials.py  get_failure_traces.py  get_remaining_trial_configs.py  get_terminus2_runs.py  get_trajectory.py  plot_task_scores.py  read_task_categories.py  run_failed_trials.py  run_job.py
sql/: add_trial_models_after_timestamp.sql  compute_accuracy.sql  compute_cost.sql  get_agent_model_scores.sql  get_agent_scores.sql  get_agent_scores_and_costs.sql  get_agent_scores_function.sql  get_agent_scores_prerelease_function.sql  get_task_model_p_hats.sql  max_gaps_analysis.sql  schema.sql  tasks_missing_trials.sql  tasks_solved_by_codex_not_openhands.sql  terminus_timeout_token_comparison.sql  trials_timeout_null_tokens.sql
src/: failure_classes.py  failure_classifier.py  name_remapping.py  plots.py  trace_parser.py  trace_utils.py  util_scores.py
tests/: test_trace_parser.py
(+32 files in other folders)
