[project]
name = "terminal-bench-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Shaw", email = "alexgshaw64@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipython-sql>=0.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sandboxes",
    "supabase-pydantic>=0.24.2",
    "tabulate>=0.9.0",
    "typer>=0.17.4",
]

[project.scripts]
tbx = "terminal_bench_experiments.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
sandboxes = { path = "../sandboxes", editable = true }
