[project]
name = "terminal-bench-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Shaw", email = "alexgshaw64@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "harbor",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipython-sql>=0.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "prettytable==3.5.0",
    "psycopg2-binary>=2.9.10",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "supabase>=2.18.1",
    "supabase-pydantic>=0.24.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[project.scripts]
tbx = "terminal_bench_experiments.cli.main:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.13.0", "ty>=0.0.1a20"]

[tool.uv.sources]
harbor = { path = "../harbor", editable = true }
